
[package]
name = "chetter"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
tokio = { version = "1.10.0", features = ["full"]  }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
cdrs-tokio = "5.0.0"
cdrs-tokio-helpers-derive = "3.0.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.9.0"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
hex = "0.4.3"
regex = "1.3.7"
lazy_static = "1.4.0"
futures = "0.3.5"
wrap = "0.1.0"
tokio-stream = "0.1.7"
tokio-util = "0.6.8"
tracing-subscriber = "0.2.20"
tracing = "0.1.26"
tracing-appender = "0.1.2"
listenfd = "0.3.5"
async-std = "1.10.0"
time = "0.3.2"
cassandra-cpp = "0.17.0"
actix-web="3.2.0" 
actix-web-actors="3"
actix = "0.12.0"



[lib]
name = "utils"
path = "src/lib.rs"


[[bin]]
name = "chetter"
path = "src/main.rs"